--- a/chrome/components/one_left-sidebar.css
+++ b/chrome/components/one_left-sidebar.css
@@ -31,9 +31,9 @@
   }
     
   #PersonalToolbar .toolbarbutton-1{
-      min-width: var(--uc-vertical-toolbar-width) !important;                                   /* Mi edit */
-    --toolbarbutton-inner-padding: 8px !important;                                              /* Mi edit */
-    --toolbarbutton-border-radius: 7px !important;                                              /* Mi code */
+        min-width: var(--uc-vertical-toolbar-width) !important;                                 /* Mi edit */
+        --toolbarbutton-inner-padding: 8px !important;                                          /* Mi edit */
+        --toolbarbutton-border-radius: 7px !important;                                          /* Mi code */
   }    
     
   #PersonalToolbar #PlacesChevron{
@@ -81,7 +81,7 @@
   #browser-bottombox,
   #main-window > body::after, /* This selector is for compatibility with tabs_below_content.css */
   #customization-container{
-    padding-left: calc(var(--uc-vertical-toolbar-width,0) + 4px);                                        /* My edit*/
+    padding-left: calc(var(--uc-vertical-toolbar-width,0) + 0px);                                        /* My edit*/
   }
 
   :root:is([chromehidden~="toolbar"],[sizemode="fullscreen"]) > body > #browser,
@@ -122,14 +122,14 @@
     /* margen izquierda pestañas*/
     
     :root:not([chromehidden~="toolbar"]) #toolbar-menubar, :root:not([chromehidden~="toolbar"]) #toolbar-menubar[autohide="true"]+#TabsToolbar {
-        padding-inline-start: calc(var(--padding-left-tab) + 8px) !important;
+        padding-inline-start: calc(var(--padding-left-tab) + 4px) !important;
     }
     
     /* Borde izquierda-derecha de la toolbar */
 
     :root:not([chromehidden~="toolbar"],[sizemode="fullscreen"]) #nav-bar {
         border-radius: 8px !important;
-        margin-inline-start: calc(var(--padding-left-tab) + 8px) !important;
+        margin-inline-start: calc(var(--padding-left-tab) + 4px) !important;
         margin-inline-end: 4px !important;
         margin-bottom: 2px !important;
     }
@@ -166,6 +166,11 @@
         padding-top: var(--padding-top-left-sidebar) !important;
         padding-bottom: var(--padding-bottom-left-sidebar) !important;
         z-index: 1 !important;
+        
+        outline: none !important;
+        margin-inline: 0px 4px !important;
+        box-shadow: inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame),
+                    inset 4px 0 var(--lwt-frame) !important;
     }
     
     /* Image in the left-sidebar in themes that use images */
@@ -174,6 +179,34 @@
         background-position: left top !important;
         background-size: cover !important;
     }
+    
+/* Outline en tema que tienen imágenes */
+
+:root:not([chromehidden~="toolbar"],[sizemode="fullscreen"]):is([lwtheme-image],[style*="--lwt-additional-images"])
+    #PersonalToolbar{
+        outline: none !important;
+        box-shadow: inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame),
+                    inset 4px 0 var(--lwt-frame),
+                    inset 0px -1px 0 0  #50505040,  /* abajo */
+                    inset 5px 0 0 0  #50505040,     /* left */
+                    inset -1px 0 0 0 #50505040,     /* right */ 
+                    inset 0 1px 0 0  #50505040      /* Left */
+                    !important;
+        }
+    
+/* outline en todos los temas "without-default-colors" config */
+
+    @media (-moz-bool-pref:"firefoxone.without-default-colors") {
+        :root:not([chromehidden~="toolbar"]) #PersonalToolbar{
+                outline: none !important;
+                box-shadow: inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame), inset 1px 0 0 0 var(--lwt-frame),
+                            inset 4px 0 var(--lwt-frame),
+                            inset 0px -1px 0 0  #50505040,  /* abajo */
+                            inset 5px 0 0 0  #50505040,     /* left */
+                            inset -1px 0 0 0 #50505040,     /* right */ 
+                            inset 0 1px 0 0  #50505040      /* Left */
+                            !important;
+                }}
     
     /* --------------------------------- Zoom on :hover items ------------------------------------ */
 
@@ -193,11 +226,17 @@
         transition:  200ms !important;
     }
     
-    /* Color y tamaño Items de la barra lateral - not extensions */
+    /* Color, tamaño  y alineación de Items de la barra lateral */
 
     #PersonalToolbar .toolbarbutton-1{
-       --toolbarbutton-inner-padding: 6px !important;
-       --toolbarbutton-outer-padding: 0 4px !important;
+        --toolbarbutton-inner-padding: 6px !important;
+        --toolbarbutton-outer-padding: 0 4px !important;
+        padding-inline-start: 4px !important;
+    }
+    
+    #PersonalToolbar #PlacesToolbarItems>.bookmark-item,
+    #PersonalToolbar #OtherBookmarks{
+        padding-inline-start: 8px !important;
     }
     
     /* Trick para suavizar border de los íconos *//*
@@ -425,79 +464,76 @@
 
 /* ############################################ Nuevos margenes Botón menú ############################################ */
     
-    :root {
-    --margin-left-icons-personal: calc(var(--my-vertical-toolbar-width) / 2 - 14px) !important;     /* Nuevo margen-left del ícono -menu- */
-    --margin-right-icons-personal: 10px !important;                                                 /* Nuevo margen-left del ícono -menu- */
-    }
-
-    @media (-moz-platform: windows), (-moz-platform: linux) {
+@media (-moz-platform: windows), (-moz-platform: linux) {
     
-/* Posición */
-    
-    :root:not([chromehidden~="toolbar"]) #PanelUI-button {
-        left: 4px !important;
-    }   
-
-/* Margin top para subir el menú [open] - posición estática */
-    
-    :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup {
-        margin-top: -42px !important;
-    }
-
-/* Logo */  
-        
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button image {
-        margin-inline-start: calc(var(--margin-left-icons-personal) - 5px) !important;
-        
+    :root:not([invisibleBMS]) {
+        --margin-left-icons-personal: calc(var(--my-vertical-toolbar-width) / 2 - 16px) !important;     /* Nuevo margen-left del ícono -menu- */
+        --margin-right-icons-personal: 12px !important;                                                 /* Nuevo margen-left del ícono -menu- */
+        --padding-left-tab: var(--uc-vertical-toolbar-width) !important;                                /* Nuevo tamaño botón -Menu- */
     }
     
-    :root:not([chromehidden~="toolbar"]):is([sizemode="maximized"]) #PanelUI-menu-button[open] image {
-        margin-inline-start: calc(var(--margin-left-icons-personal) + 3px) !important;
-    }
-        
-/* Tamaño nuevo botón Menú */
-
-    :root:not([chromehidden~="toolbar"], [sizemode="fullscreen"]) #PanelUI-menu-button{
-        --tab-height-personal: 40px !important;
-    }
-        
-    :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup {
-        --tab-height-personal: 40px !important;
-        --padding-left-tab: 86px  !important;
-        clip-path: polygon(0% 0%, 0% 100%, 1% 53%, 0 12px, calc(var(--padding-left-tab) + 6px) 12px,
-                   calc(var(--padding-left-tab) + 6px) calc(var(--tab-height-personal) - 4px), 0 calc(var(--tab-height-personal) - 4px), 0 100%, 100% 100%, 100% 0%);
-    }
-        
-/* Botón Menú [open] menos grande */
-
-    :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup>panelmultiview>box>box>panelview {
-        --padding-left-tab: 76px  !important;
-        padding-top: calc(-5px + var(--tab-height-personal)) !important;
-        z-index: 2 !important;
+/* Tamaño Logo */
+    
+:root:not([chromehidden~="toolbar"]) #PanelUI-menu-button image {
+        height: 20px !important;
+        width: 20px !important;
     }
 
+/* Tamaño */
+    
+    :root:not([chromehidden~="toolbar"],[invisibleBMS]) #PanelUI-button {
+        height: 40px !important;
+    }
+   
+    :root:not([chromehidden~="toolbar"],[invisibleBMS]) #PanelUI-menu-button:not([open]) {
+        width: calc(var(--padding-left-tab) + 4px) !important;
+        padding-inline: calc(var(--padding-left-tab)/2 - 14px) !important;
+    }
+    
+/* Alinear botón en ventana maximizada, ventana normal y fullscreen */
+        
+    :root:not([chromehidden~="toolbar"],[invisibleBMS],[sizemode="normal"],[sizemode="fullscreen"]) #PanelUI-menu-button[open] .toolbarbutton-badge-stack {
+        padding-inline-start: calc(var(--margin-left-icons-personal) + 4px) !important;
+    }
+    
+    :root:not([chromehidden~="toolbar"],[invisibleBMS]):is([sizemode="normal"],[sizemode="fullscreen"]) #PanelUI-menu-button[open] .toolbarbutton-badge-stack {
+        margin-inline-start: calc(var(--margin-left-icons-personal) - 2px) !important;
+    }
+       
+/* Posición margin-top */
+        
+    :root:not([chromehidden~="toolbar"],[sizemode="fullscreen"],[invisibleBMS]) #PanelUI-menu-button>.toolbarbutton-badge-stack {
+        margin-block-start: 12px !important;
+    }
+    
+    :root:not([chromehidden~="toolbar"],[invisibleBMS])[sizemode="fullscreen"] #PanelUI-menu-button>.toolbarbutton-badge-stack {
+        margin-block-start: 4px !important;
+    }
+    
 /* menu :hover y open */
     
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button>.toolbarbutton-badge-stack {
-        max-height: calc(var(--tab-height-personal) - 8px) !important;
-        min-height: calc(var(--tab-height-personal) - 8px) !important;
-        max-width: calc(var(--padding-left-tab) - 16px) !important;
-        min-width: calc(var(--padding-left-tab) - 16px) !important;
-        margin-inline-start: 8px !important;
+    :root:not([chromehidden~="toolbar"],[sizemode="normal"],[sizemode="fullscreen"],[invisibleBMS]) 
+        #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
+            min-height: 30px !important; /* Sirve para alinear al cambiar the height de pestañas */
+            max-height: 30px !important;
     }
     
-    :root:not([chromehidden~="toolbar"]):is([sizemode="maximized"]) #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
-        min-width: calc(var(--padding-left-tab) + var(--margin-left-icons-personal) + var(--margin-right-icons-personal)) !important;
-        border-radius: 4px !important;
-        width: 28.5em !important;
-        margin-inline-start: 0px !important;
+/* Padding top para hacer espacio para la fila del Label menú */
+    
+    :root:not([chromehidden~="toolbar"],[invisibleBMS])[sizemode="maximized"] #appMenu-popup>panelmultiview>box>box>panelview {
+        padding-top: 36px !important;
     }
-        
-    :root:not([chromehidden~="toolbar"])[sizemode="fullscreen"] #PanelUI-menu-button>.toolbarbutton-badge-stack {
-        max-height: initial !important;
-        min-height: initial !important;
+    
+/* Margin top para subir el menú [open] */
+    
+    :root:not([chromehidden~="toolbar"],[invisibleBMS])[sizemode="maximized"] #appMenu-popup {
+        --menu-plus-label-width: 94px !important;
+        --button-height-personal: 34px !important;
+        margin-top: calc(-5px - var(--button-height-personal)) !important;
+        clip-path: polygon(0% 0%, 0% 100%, 1% 53%, 0 13px, var(--menu-plus-label-width) 13px,
+                   var(--menu-plus-label-width) var(--button-height-personal), 0 var(--button-height-personal), 0 100%, 100% 100%, 100% 0%);
     }
-}
+  }
 
 /* _______________________________ Baner de -actualización disponible- _______________________________ */
 
